--- a/docs/quickstart/web/cypress.mdx
+++ b/docs/quickstart/web/cypress.mdx
@@ -3,32 +3,13 @@ sidebar_position: 2
 title: Cypress
 ---
 
+import PartialIntro from './_tutorial-intro.mdx';
+import PartialOutro from './_next-steps.mdx';
+
+
 # Cypress Tutorials
 
-This tutorial will show you how to automate visual tests using the Applitools Ultrafast Grid with Cypress in JavaScript.
-[Applitools Ultrafast Test Cloud](https://applitools.com/platform/)
-can help you catch functional and visual problems that traditional automation struggles to find.
-It can also help you to scale your tests to cover all browsers and devices in seconds.
-The Applitools Eyes SDK for Cypress does *not* support the Classic runner – it supports only the Ultrafast Grid.
-
-In this tutorial, you will:
-
-1. Set up your local machine for testing.
-2. Clone the example project repository.
-3. Learn how to automate visual testing with Applitools Eyes.
-4. Run the visual tests and review results in the Applitools dashboard.
-
-After setting up your machine,
-this tutorial should take **about 15 minutes** to complete.
-If you get stuck along the way,
-please [reach out to us for help](https://help.applitools.com/hc/en-us/requests/new)!
-
-:::tip Quickstart
-
-If you prefer a quickstart instead of a full tutorial,
-clone the [example repository](https://github.com/applitools/example-cypress-javascript-ufg)
-and follow the [README](https://github.com/applitools/example-cypress-javascript-ufg/blob/master/README.md) instructions!
-:::
+<PartialIntro name="Cypress" repo="https://github.com/applitools/example-cypress-javascript-ufg"/>
 
 ## Recognizing project structure
 
@@ -298,31 +279,4 @@ Visual differences will be highlighted in magenta.
 It's up to you to accept (👍) or reject (👎) the changes.
 Applitools will remember your decisions for future analysis.
 
-:::caution Having Trouble?
-Don't suffer in silence!
-Let us help you.
-Please [reach out to us](https://help.applitools.com/hc/en-us/requests/new) to get your project working.
-:::
-
-
-## Taking the next steps
-
-Congratulations on completing this tutorial!
-There's still so much to learn about visual testing with Applitools,
-but you're off to a great start.
-
-Here are resources for your next steps:
-
-1. [🤖 How Applitools Works](https://applitools.com/tutorials/overview/how-it-works.html)
-2. [🖼 Analyzing Differences](https://applitools.com/tutorials/overview/analyzing-differences.html)
-3. [🐞 Reporting Bugs](https://applitools.com/tutorials/getting-started/reporting-bugs-from-applitools.html)
-4. [💥 Troubleshooting Common Issues](https://applitools.com/tutorials/getting-started/common-issues.html)
-5. [🗺 Detailed overview of visual testing with Applitools](https://applitools.com/docs/topics/overview.html)
-6. [👀 Docs for the Applitools Eyes SDK for Cypress](https://www.npmjs.com/package/@applitools/eyes-cypress)
-
-You can also:
-
-* [Request a demo](https://applitools.com/request-demo?utm_source=tutorials)
-* [Explore the Applitools knowledge base](https://help.applitools.com/hc/en-us/)
-* [File a ticket](https://help.applitools.com/hc/en-us/requests/new)
-
+<PartialOutro/>
