--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -4,7 +4,119 @@ title: Introduction
 description: My document description
 hide_table_of_contents: true
 ---
+import useBaseUrl from '@docusaurus/useBaseUrl'
+import ThemedImage from '@theme/ThemedImage'
+import AngularLogo from '@site/static/img/libraries/angular-icon.svg'
+import SeleniumLogo from '@site/static/img/libraries/selenium-icon.svg'
+import CypressLogo from '@site/static/img/libraries/cypress-icon.svg'
+import PlaywrightLogo from '@site/static/img/libraries/playwright-icon.svg'
+import PuppetteerLogo from '@site/static/img/libraries/puppetteer-icon.svg'
 import Link from '@docusaurus/Link'
+const webframeworks = [
+  {
+    name: 'Selenium',
+    logo: SeleniumLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Cypress',
+    logo: CypressLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Playwright',
+    logo: PlaywrightLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Puppetteer',
+    logo: PuppetteerLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'WebdriverIO',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Protractor',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Testcafe',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Watir',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Capybara',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'LeanFT',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+]
+const mobileframeworks = [
+  {
+    name: 'Appium',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Espresso',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Calabash',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'XCUI',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+]
+const desktopframeworks = [
+  {
+    name: 'Windows Coded UI',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Windows UFT',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'Windows Apps',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+]
+const codeless = [
+  {
+    name: 'SeleniumIDE',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+  {
+    name: 'UFT',
+    logo: AngularLogo,
+    href: '/docs/guides/with-angular',
+  },
+]
+
+
 
 <head>
   <title>Visual Testing Tutorials</title>
@@ -64,170 +176,121 @@ The Applitools Test Cloud is made up of several distinct modules that can be use
 Choose your favorite framework or language and get started by adding the Applitools SDK.
 
 ### Web SDKs
- <div className="">
-  <div className="row">
-     <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Selenium</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Cypress</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Playwright</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Puppetteer</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>WebdriverIO</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Protractor</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Testcafe</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Watir</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Capybara</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>LeanFT</h4>
-        </div>
-      </Link>
-    </div>
+
+<div>
+  <div class="row is-multiline">
+    {webframeworks.map((x) => (
+      <div key={x.name} class="col col--3">
+        <Link class="card" to={x.href}>
+          <div class="card__body" style={{ display: 'flex', gap: 20, alignItems: 'center' }}>
+            {x.logo && !x.themed ? (
+              <x.logo width="20" alt={x.name} style={{ display: 'block', maxHeight: 20 }} />
+            ) : (
+              <ThemedImage
+                style={{ display: 'block', maxHeight: 20 }}
+                alt={x.name}
+                width="20"
+                sources={{
+                  light: useBaseUrl(x.logo.light),
+                  dark: useBaseUrl(x.logo.dark),
+                }}
+              />
+            )}
+            <p>{x.name}</p>
+          </div>
+        </Link>
+      </div>
+    ))}
   </div>
- </div>
+</div>
 
- ### Mobile SDKs
- <div className="">
-  <div className="row">
-     <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Appium</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Espresso</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Calabash</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>XCUI</h4>
-        </div>
-      </Link>
-    </div>
+
+
+### Mobile SDKs
+<div>
+  <div class="row is-multiline">
+    {mobileframeworks.map((x) => (
+      <div key={x.name} class="col col--3">
+        <Link class="card" to={x.href}>
+          <div class="card__body" style={{ display: 'flex', gap: 20, alignItems: 'center' }}>
+            {x.logo && !x.themed ? (
+              <x.logo width="20" alt={x.name} style={{ display: 'block', maxHeight: 20 }} />
+            ) : (
+              <ThemedImage
+                style={{ display: 'block', maxHeight: 20 }}
+                alt={x.name}
+                width="20"
+                sources={{
+                  light: useBaseUrl(x.logo.light),
+                  dark: useBaseUrl(x.logo.dark),
+                }}
+              />
+            )}
+            <p>{x.name}</p>
+          </div>
+        </Link>
+      </div>
+    ))}
   </div>
- </div>
+</div>
 
- ### Desktop SDKs
- <div className="">
-  <div className="row">
-     <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Selenium</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Cypress</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>Playwright</h4>
-        </div>
-      </Link>
-    </div>
+
+### Desktop SDKs
+<div>
+  <div class="row is-multiline">
+    {desktopframeworks.map((x) => (
+      <div key={x.name} class="col col--3">
+        <Link class="card" to={x.href}>
+          <div class="card__body" style={{ display: 'flex', gap: 20, alignItems: 'center' }}>
+            {x.logo && !x.themed ? (
+              <x.logo width="20" alt={x.name} style={{ display: 'block', maxHeight: 20 }} />
+            ) : (
+              <ThemedImage
+                style={{ display: 'block', maxHeight: 20 }}
+                alt={x.name}
+                width="20"
+                sources={{
+                  light: useBaseUrl(x.logo.light),
+                  dark: useBaseUrl(x.logo.dark),
+                }}
+              />
+            )}
+            <p>{x.name}</p>
+          </div>
+        </Link>
+      </div>
+    ))}
   </div>
- </div>
+</div>
 
- ### Codeless SDKs
- <div className="">
-  <div className="row">
-     <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>SeleniumIDE</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>TestIM</h4>
-        </div>
-      </Link>
-    </div>
-    <div class="col col--3">
-      <Link class="card" to="/docs/guides/database">
-        <div class="card__body">
-          <h4>UFT</h4>
-        </div>
-      </Link>
-    </div>
+
+### Codeless SDKs
+<div>
+  <div class="row is-multiline">
+    {codeless.map((x) => (
+      <div key={x.name} class="col col--3">
+        <Link class="card" to={x.href}>
+          <div class="card__body" style={{ display: 'flex', gap: 20, alignItems: 'center' }}>
+            {x.logo && !x.themed ? (
+              <x.logo width="20" alt={x.name} style={{ display: 'block', maxHeight: 20 }} />
+            ) : (
+              <ThemedImage
+                style={{ display: 'block', maxHeight: 20 }}
+                alt={x.name}
+                width="20"
+                sources={{
+                  light: useBaseUrl(x.logo.light),
+                  dark: useBaseUrl(x.logo.dark),
+                }}
+              />
+            )}
+            <p>{x.name}</p>
+          </div>
+        </Link>
+      </div>
+    ))}
   </div>
- </div>
-
-
+</div>
 
 
 
