--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -4,7 +4,9 @@ title: Introduction
 description: My document description
 hide_table_of_contents: true
 ---
-
+import EyesIcon from '@site/static/img/applitools-eyes-icon.svg'
+import UFGIcon from '@site/static/img/applitools-ufg-icon.svg'
+import NMGIcon from '@site/static/img/applitools-nmg-icon.svg'
 import Link from '@docusaurus/Link'
 import useBaseUrl from '@docusaurus/useBaseUrl'
 import ThemedImage from '@theme/ThemedImage'
@@ -12,7 +14,7 @@ import AngularLogo from '@site/static/img/libraries/angular-icon.svg'
 import SeleniumLogo from '@site/static/img/libraries/selenium-icon.svg'
 import CypressLogo from '@site/static/img/libraries/cypress-icon.svg'
 import PlaywrightLogo from '@site/static/img/libraries/playwright-icon.svg'
-import PuppetteerLogo from '@site/static/img/libraries/puppetteer-icon.svg'
+import puppeteerLogo from '@site/static/img/libraries/puppeteer-icon.svg'
 const webframeworks = [
   {
     name: 'Selenium',
@@ -27,93 +29,93 @@ const webframeworks = [
   {
     name: 'Playwright',
     logo: PlaywrightLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/web/playwright',
   },
   {
-    name: 'Puppetteer',
-    logo: PuppetteerLogo,
-    href: '/docs/guides/with-angular',
+    name: 'puppeteer',
+    logo: puppeteerLogo,
+    href: '/tutorials/quickstart/web/puppeteer',
   },
   {
     name: 'WebdriverIO',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/categiry/webdriverio',
   },
   {
     name: 'Protractor',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/web/protractor',
   },
   {
     name: 'Testcafe',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/web/testcafe',
   },
   {
     name: 'Watir',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/web/watir',
   },
   {
     name: 'Capybara',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/web/Capybara',
   },
   {
     name: 'LeanFT',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/web/LeanFT',
   }
 ]
 const mobileframeworks = [
   {
     name: 'Appium',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/category/appium',
   },
   {
     name: 'Espresso',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/mobile/espresso',
   },
   {
     name: 'Calabash',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/mobile/calabash',
   },
   {
     name: 'XCUI',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/mobile/xcui',
   },
 ]
 const desktopframeworks = [
   {
     name: 'Windows Coded UI',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/desktop/windows-coded-UI',
   },
   {
     name: 'Windows UFT',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/desktop/windows-uft',
   },
   {
     name: 'Windows Apps',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/desktop/windows-apps',
   },
 ]
 const codeless = [
   {
     name: 'SeleniumIDE',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/codeless/selenium-ide',
   },
   {
     name: 'UFT',
     logo: AngularLogo,
-    href: '/docs/guides/with-angular',
+    href: '/tutorials/quickstart/codeless/uft',
   },
 ]
 
@@ -129,14 +131,16 @@ The Applitools Test Cloud is made up of several distinct modules that can be use
      <div class="col col--6">
       <Link class="card" to="/tutorials/platform/applitools-eyes/overview">
         <div class="card__body">
-          <h4>Eyes</h4>
-          <p>The industry leading Visual AI engine.</p>
+        <img src={EyesIcon} alt="Example banner" />
+            <h4>Eyes</h4>
+            <p>The industry leading Visual AI engine.</p>
         </div>
       </Link>
     </div>
     <div class="col col--6">
       <Link class="card" to="/tutorials/platform/applitools-ufg">
         <div class="card__body">
+          <img src={UFGIcon} alt="Example banner" />
           <h4>Ultrafast Test Grid</h4>
           <p>A cloud-based testing grid for web and mobile browsers.</p>
         </div>
@@ -147,6 +151,7 @@ The Applitools Test Cloud is made up of several distinct modules that can be use
     <div class="col col--6">
       <Link class="card" to="/tutorials/platform/applitools-nmg">
         <div class="card__body">
+        <img src={NMGIcon} alt="Example banner" />
           <h4>Native Mobile Grid</h4>
            <p>A cloud-based testing grid for Mobile Devices.</p>
         </div>
