--- a/docs/quickstart/web/cypress.mdx
+++ b/docs/quickstart/web/cypress.mdx
@@ -3,48 +3,10 @@ sidebar_position: 2
 title: Cypress
 ---
 
-import PartialIntro from './_tutorial-intro.mdx';
-import PartialOutro from './_next-steps.mdx';
+import PartialIntro from '@site/docs/_partials/_partials-intro_.mdx'
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
-
-# Cypress Tutorials
-
-<PartialIntro name="Cypress" repo="https://github.com/applitools/example-cypress-javascript-ufg"/>
-
-## Recognizing project structure
-
-The example project uses:
-
-* [JavaScript](https://www.javascript.com/) as the programming language
-* [Cypress](https://www.cypress.io/) for browser automation
-* [Google Chrome](https://www.google.com/chrome/downloads/) as the local browser for testing
-* [npm](https://www.npmjs.com/) for dependency management
-* [Applitools Eyes](https://applitools.com/platform/eyes/) for visual testing
-* [Applitools Ultrafast Grid](https://applitools.com/platform/ultrafast-grid/) for cross-browser execution
-
-
-## Setting up your machine
-
-You'll need a few things to run this tutorial:
-
-1. An [Applitools account](https://auth.applitools.com/users/register),
-   which you can register for free.
-
-2. [Node.js](https://nodejs.org/en/download/), version 12 or higher.
-
-3. A good JavaScript editor like [Visual Studio Code](https://code.visualstudio.com/docs/languages/javascript).
-
-4. Up-to-date versions of the following browsers:
-   * [Google Chrome](https://www.google.com/chrome/)
-   * [Mozilla Firefox](https://www.mozilla.org/en-US/firefox/new/)
-   * [Microsoft Edge](https://www.microsoft.com/en-us/edge)
-
-
-## Downloading the example project
-
-The example project is located at
-[https://github.com/applitools/example-cypress-javascript-ufg](https://github.com/applitools/example-cypress-javascript-ufg).
-Clone this repository to your local machine:
+<PartialIntro/>
 
 ```
 $ git clone https://github.com/applitools/example-cypress-javascript-ufg.git
@@ -203,9 +165,7 @@ module.exports = {
 
 ## Preparing for test execution
 
-Before running the visual test,
-you must [find your Applitools API key](https://applitools.com/tutorials/getting-started/setting-up-your-environment.html)
-and set it as an environment variable named `APPLITOOLS_API_KEY`.
+Before running the visual test, you must [find your Applitools API key](https://applitools.com/tutorials/getting-started/setting-up-your-environment.html) and set it as an environment variable named `APPLITOOLS_API_KEY`.
 
 On macOS and Linux:
 
